--- a/lang/default.json
+++ b/lang/default.json
@@ -21,7 +21,7 @@
     "Version": "Version",
     "Is-Available": "is available",
     "User-Managment": "User managment",
-    "Search-Username": "Search for username",
+    "Search-Username": "Search\u2008for\u2008username",
     "Profile-Picture": "Profile picture",
     "Username": "Account username",
     "Email": "Account email",
@@ -57,7 +57,7 @@
     "Username2": "Username",
     "Password": "Password",
     "noaccount": "Haven't account yet?",
-    "Search-For-File": "Search for file name",
+    "Search-For-File": "Search\u2008for\u2008file\u2008name",
     "Preview": "Preview",
     "File-Name": "File name",
     "Is-Shared": "Is shared?",
