all sentences done

--- a/lang/default.json
+++ b/lang/default.json
@@ -79,6 +79,39 @@
     "Account-Deleted": "Your account has been deleted!",
     "Error401": "Error 401 - Unauthorized",
     "Account-Not-Found": "Account not found",
-    "Account-Deleted2": "Account ${account} has been deleted."
-    
+    "Account-Deleted2": "Account ${account} has been deleted.",
+    "Account-Renamed": "Account ${account} with ${findusertorename.email} email has been renamed to ${newaccountname} with ${newaccountemail} email",
+    "API-Key-Exist": "Error 409 - API Key already exist",
+    "API-Key-Generated": "API Key with name ${apiKeyName} was generated: ${apiKey.toString()} (!! WARNING: YOU WON'T SEE THIS KEY AGAIN!!)",
+    "API-Key-Not-Found": "Error 404 - API key not found",
+    "API-Key-Deleted": "API Key with name ${apiKeyName} was deleted!",
+    "File-Not-Found": "File ${file} not found!",
+    "Account-Verified": "Your account has been successfully verified!",
+    "File-Renamed": "File ${oldname} has been renamed to ${newname}",
+    "Error404": "Error 404 - Page not found!",
+    "Reg-Disabled": "Sorry, registration is disabled.",
+    "Pass-8-Characters": "Password must contains atleast 8 characters.",
+    "Username-Exist": "User with this username already exists!",
+    "Email-Exist": "User with this email already exists!",
+    "IP-Exist": "User with this IP address already exists!",
+    "Role-Updated": "Role ${role} has been updated with maximum storage ${maxStorage} MB",
+    "Role-Added": "Role ${req.body.role} (${req.body.storage} MB) added!",
+    "Del-Admin": "You can't delete admin role!",
+    "Del-User": "You can't delete user role!",
+    "Role-Deleted": "Role ${req.body.role} has been deleted!",
+    "Role-Changed": "${req.params.username}'s role has been changed to ${req.body.role}!",
+    "Username-Not-Exist": "No account with this username!",
+    "No-Shared-File": "No shared file found!",
+    "File-Already-Shared": "This file is already shared!",
+    "File-Shared": "File ${file} has been set as shared!",
+    "File-Not-Shared": "File ${file} isnt shared!",
+    "Disabled-Shared": "File ${file} has been set as not shared!",
+    "File-Already-Exist": "File ${name} already exist!",
+    "Limit-Reached": "You have reached your storage limit! Try delete some files.",
+    "File-Uploaded": "File ${name} uploaded succesfully!",
+    "Have-Subtitles": "This file already have subtitles",
+    "File-Not-Found2": "File not found",
+    "Subtitles-Added": "Subtitles ${req.body.name} successfully added to ${file}",
+    "Subtitles-Removed": "Subtitles successfully removed from ${file}",
+    "No-Subtitles": "This file has no subtitles"
 }
